prototype layout of dashboard

--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
 </head>
 
 <body>
-    <h1>Welcome to the Vogel House</h1>
+    <div class="aboveGround">
+        <h1>Welcome to the Vogel House</h1>
+        <img src="assets/family-house.svg" />
+        <!-- insert an image of our house -->
+    </div>
+    <div class="belowGround">
+        <h2>this is where all the cool shit is</h2>
+        <div class="services">
+            <ul>
+                <a href="./index.html">
+                    <li>Updates</li>
+                </a>
+                <a href="https://underthebirdhouse.com/library">
+                    <li>Our Library</li>
+                </a>
+            </ul>
+        </div>
+    </div>
+    <div class="bedrock">
+        <!-- Leaving this out until we both have websites or something -->
+        <!-- <h3>REAL Internet Places</h3>
+        <ul>
+            <a href="https://www.davidvdev.com"><li>David</li></a>
+            <a><li>Tara</li></a>
+        </ul> -->
+    </div>
 
 </body>
 
