borrowed envelope css animation from Coding Tonight

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>this is where all the cool shit is</h2>
         <div class="services">
             <ul>
-                <a href="./index.html">
+                <a href="./update.html">
                     <li>Updates</li>
                 </a>
                 <a href="https://underthebirdhouse.com/library">
