--- a/update.html
+++ b/update.html
@@ -8,18 +8,22 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <script src='main.js'></script>
+    <script src="confetti.js"></script>
 </head>
 
 <body class="update">
-    <div class="envelope">
+    <input type="checkbox" id="announcement" />
+    <label class="envelope btn btn-warning" for="announcement" onclick="toggleConfetti();">
         <div class="top-side"></div>
         <div class="left-side"></div>
         <div class="contents">
-            <p>TEXT</p>
+            <p>It's a girl!</p>
         </div>
         <div class="right-side"></div>
         <div class="bottom-side"></div>
-    </div>
+    </label>
+    <p class="details">The Vogel Family grows by one October 2024</p>
+    <p class="details">🧔🏻‍♂️ 👩🏻 👶🏻 🐱 🐱</p>
 </body>
 
 </html>
