--- a/update.html
+++ b/update.html
@@ -17,7 +17,7 @@
         <div class="top-side"></div>
         <div class="left-side"></div>
         <div class="contents">
-            <p>It's a girl!</p>
+            <p>We're having a girl!</p>
         </div>
         <div class="right-side"></div>
         <div class="bottom-side"></div>
