spacing and animations established

--- a/update.html
+++ b/update.html
@@ -24,6 +24,12 @@
     </label>
     <p class="details">The Vogel Family grows by one October 2024</p>
     <p class="details">🧔🏻‍♂️ 👩🏻 👶🏻 🐱 🐱</p>
+    <div class="photos">
+        <img src="assets/rhubarb-baby.webp" />
+        <img src="assets/tulip-baby.webp" />
+        <img src="assets/ultrasound.webp" />
+        <img src="assets/us.webp" />
+    </div>
 </body>
 
 </html>
