added new photo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <img src="assets/rhubarb-baby.webp" />
         <img src="assets/tulip-baby.webp" />
         <img src="assets/ultrasound.webp" />
+        <img src="assets/ultrasound-2.webp" />
         <img src="assets/us.webp" />
     </div>
 </body>
